# AntAlgoritmHackaton

./: CMakeLists.txt  aahahaphysics---.cpp  input.csv  main.cpp
report/: main.typ
